# ee205-animal-farm

./: Animal.cpp  Animal.h  CMakeLists.txt  Cat.cpp  Cat.h  Color.h  Gender.h  List.cpp  List.h  Mammal.cpp  Mammal.h  Node.h  SinglyLinkedList.cpp  SinglyLinkedList.h  Weight.cpp  Weight.h  addCats.cpp  addCats.h  catDatabase.cpp  catDatabase.h  config.h  deleteCats.cpp  deleteCats.h  main.cpp  reportCats.cpp  reportCats.h  updateCats.cpp  updateCats.h
